--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Test Name</title>
   </head>
   <body>
+    <h1>Code School Heading Test</h1>
 
+    <ul>
+      <li>How to code</li>
+      <li>How to read</li>
+      <li>How to write</li>
+    </ul>
   </body>
 </html>
