Changed header to Hello, Code School

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test Name</title>
   </head>
   <body>
-    <h1>Code School Heading Test</h1>
+    <h1>Hello, Code School</h1>
 
     <ul>
       <li>How to code</li>
